--- a/index.html
+++ b/index.html
@@ -242,6 +242,7 @@
 </script>
 
 <script>
+    // Add your Google Apps Script URL here
     const scriptURL = 'https://script.google.com/macros/s/AKfycbyNF_3LioyzKUteDT0hb2Ai-jP9RGoKYqkDWzmkCQCRipPfRxinCWw644VNXrBoZD49/exec'
     const form = document.forms['submit-to-google-sheet']
     const msg = document.getElementById("msg")
